# EcuRecetasCLI

./: .gitignore  CMakeLists.txt  data.txt
headers/: cli_options.h  colors.h  constants.h  data.h  style.h  utils.h
headers/input_validation/: input_receivers.h  validators.h
src/: cli_options.c  data.c  main.c  utils.c
src/cli_options/: cli_buscar_receta.c  cli_crear_receta.c  cli_eliminar_receta.c  cli_modificar_receta.c  cli_mostrar_todas_recetas.c
src/input_validation/: input_receivers.c  validators.c
